--- a/index.css
+++ b/index.css
@@ -7,6 +7,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font: inherit;
     vertical-align: baseline;
 }
+body{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 #main{
     padding: 15px;
 }
@@ -28,9 +31,10 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 /* select panel */
 #selectPage{
-    padding: 15px;
+    padding: 0 15px;
 }
 #list{
+    overflow-y: auto;
 }
 #list .item{
     position: relative;
@@ -55,7 +59,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     padding-top: 15px;
 }
 
-
 /* modal */
 .modalWrapper {
     display: none;
@@ -75,11 +78,95 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 
 .modal {
-    position: relative;
-    overflow-y: auto;
+    position: absolute;
+    overflow: hidden;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     background: #fff;
+}
+.modal .modalContent{
+    position: absolute;
+    top: 30px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10;
+    overflow-y: auto;
+}
+.modal .modalContent.hasActions{
+    bottom: 42px;
+}
+@media (min-width: 680px) {
+    .modal {
+        top: 20%;
+        right: 20%;
+        bottom: 20%;
+        left: 20%;
+        overflow: visible;
+        min-height: 260px;
+        width: 60%;
+        border-radius: 4px;
+        box-shadow: 0 0 4px 0px #333;
+    }
+}
+
+.modal .modalTitle{
+    position: absolute;
+    top: 0;
+    left: 20px;
+    right: 20px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.modal .modalActions{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 42px;
+    z-index: 10;
+
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align:stretch;
+    -webkit-align-items:stretch;
+    -ms-flex-align:stretch;
+    align-items:stretch;
+}
+.modalActions .btn{
+    display: block;
+    padding: 8px;
+    outline: none;
+    cursor: pointer;
+
+    -webkit-box-flex:1;
+    -webkit-flex:1;
+    -moz-box-flex:1;
+    -moz-flex:1;
+    -ms-flex:1;
+    flex:1;
+    width: 0;
+}
+.modalActions .btn.btn-ok{
+    color: #fff;
+    background: #2691F7;
+    border: 1px solid #2691F7;
+}
+.modalActions .btn.btn-cancel{
+    color: #2691F7;
+    background: #fff;
+    border: 1px solid #2691F7;
+}
+.modalActions .btn:active,
+.modalActions .btn:hover{
+    border: 1px solid #2691F7;
 }
 
 .modal .closeIcon{
