--- a/src/MentionEditor.sass
+++ b/src/MentionEditor.sass
@@ -11,6 +11,8 @@
     min-height: 100px
     overflow-y: auto
     -webkit-user-select: text
+    &.focus
+      border: 1px solid #2691F7
     input
       padding: 0 2px
       background: none
