--- a/src/MentionEditor.sass
+++ b/src/MentionEditor.sass
@@ -1,6 +1,7 @@
 .mentionField
   position: relative
   overflow: hidden
+  background: #fff
   .mentionEditor,
   .mentionPlaceholder
     line-height: 1.6
