--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -51,7 +51,7 @@ Theme Styles
 body {
   box-sizing: border-box;
   color:#373737;
-  background: #f2f2f2;
+  background: #fff;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -252,7 +252,7 @@ td {
  }
 
 form {
-  background: #f2f2f2;
+  background: #fff;
   padding: 20px;
 }
 
@@ -355,7 +355,7 @@ Full-Width Styles
 }
 
 #main_content_wrap {
-  background: #f2f2f2;
+  background: #fff;
 }
 
 #main_content {
