--- a/index.css
+++ b/index.css
@@ -6,6 +6,13 @@
     padding: 5px 0;
 }
 
+.value{
+    padding: 10px;
+    background: #efefef;
+    border-radius: 4px;
+    word-break: break-all;
+}
+
 .mentionBtn{
     display: inline-block;
     margin: 15px 0;
